--- a/main.html
+++ b/main.html
@@ -10,7 +10,22 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table>
+	<thead style="text-align:center;">
+		<th>Roll Number</th>
+		<th>Name</th>
+	</thead>
+	<tbody>
+		<tr style="text-align:center;">
+			<td>23</td>
+			<td>Deep</td>
+		</tr>
+		<tr style="text-align:center">
+			<td>26</td>
+			<td>Damini</td>
+		</tr>
+	</tbody>
+</table>
 </body>
 
 </html>
